~ if the file for the testing connector doesn't exist an empty one will be created ~ only rooted paths allowed in file:// URLs for the testing connector

--- a/SharePosh.csproj
+++ b/SharePosh.csproj
@@ -211,6 +211,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Module\about_SharePosh.help.txt" />
+    <EmbeddedResource Include="Resources\NewSite.xml" />
     <None Include="Web References\SOAP.Dws\Dws.disco" />
     <EmbeddedResource Include="Resources\ServerReleases.xml" />
     <EmbeddedResource Include="Resources\FakeSite.xml" />
