+ more string extenstion tests (startswith and endswith)

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -60,8 +60,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Extension\StringExtensionTest.cs" />
     <Compile Include="Utility\ConfigurableComparerTest.cs" />
-    <Compile Include="Utility\StringUtilityTest.cs" />
     <Compile Include="Utility\PathUtilityTest.cs" />
     <Compile Include="Utility\ValueUtilityTest.cs" />
     <Compile Include="Utility\XmlUtilityTest.cs" />
